added more to wordLibrary

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <section class="userInput">
         <div class="outerWrapper">
+            <h2>Yo fam generate some placeholder text</h2>
             <!-- oninput is for range slider label -->
             <!-- <form class="wrapper" oninput="numParaValue.value=numPara.valueAsNumber">
                 <fieldset class="numParagraphs">
