--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- google font link -->
+    <link href="https://fonts.googleapis.com/css?family=Karla|Rubik:700" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Toronto Ipsum</title>
 </head>
