added background images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="user-input">
         <div class="outer-wrapper">
-            <h2>Yo fam generate some placeholder text</h2>
+            <h2>Generate some placeholder text, fam</h2>
             <!-- oninput is for range slider label -->
             <!-- <form class="wrapper" oninput="numParaValue.value=numPara.valueAsNumber">
                 <fieldset class="numParagraphs">
@@ -28,10 +28,10 @@
             </form> -->
             <!-- oninput is for range slider label -->
             <form class="wrapper" >
-                <fieldset class="paragraph-size">
-                    <label for="paragraph-size">How many sentences per paragraph?</label>
+                <fieldset class="paragraph-size clearfix">
+                    <label for="paragraph-size">sentences per paragraph</label>
                     <input name="para-size" type="range" min="5" max="15" step="5" value="5" id="paragraph-size">
-                    <output name="para-size-value" for="paragraph-size">5</output>
+                    <!-- <output name="para-size-value" for="paragraph-size">5</output> -->
                 </fieldset>
                 <button>Generate</button>
             </form>
