finished refactoring JS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <h1>Toronto Ipsum Generator</h1>
                     </header>
                     <section class="user-input">
-                        <h2>Generate some placeholder text fam</h2>
+                        <h2>Generate some placeholder text</h2>
                         <form>
                             <fieldset class="paragraph-size">
                                 <label for="paragraph-size">
