added copy to clipboard button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                         <input name="para-num" type="range" min="1" max="5" step="1" value="1" id="paragraph-num">
                                     </fieldset>
                                 </div>
-                            <button>Generate</button>
+                            <button class=".generate">Generate</button>
                         </form>
                         <h2 class="scroll-down-notification"></h2>
                     </section>
