added word category selection

--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
                                             <option value="5">5 paragraphs</option>
                                         </select>
                                     </div>
+                                </div><!--  selectors -->
+                                <div class="categories">
+                                    <label for="sports" class="sports-button">Add Sports</label>
+                                    <input type="checkbox" id="sports">
+                                    <label for="slang" class="slang-button">Add Slang</label>
+                                    <input type="checkbox" id="slang">
                                 </div>
                             <button class=".generate">Generate</button>
+                            <h2 class="scroll-down-notification"></h2>
                         </form>
-                        <h2 class="scroll-down-notification"></h2>
+                        
                     </section>
-                </div>
+                </div> <!--  start-page-content-box -->
             </div> <!-- inner-wrapper -->
         </div> <!-- outer-wrapper -->
     </section>
