fixed bug with padding on generated content area

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <form>
                             <h2>Generate some placeholder text</h2>
                                 <div class="selectors">
-                                    <!-- divs instead of fieldset because flexbox is bugged inside fieldsets for chrome -->
+                                    <!-- divs instead of fieldset because flexbox is currently bugged inside fieldsets for chrome -->
                                     <div class="paragraph-size selector-area">
                                         <label for="paragraph-size">Sentences per paragraph: </label>
                                         <select name="paragraph-size" id="paragraph-size">
