added focus states to buttons, more words to dictionary

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- google font link -->
-    <link href="https://fonts.googleapis.com/css?family=Karla|Rubik:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Toronto Ipsum</title>
 </head>
@@ -40,10 +40,10 @@
                                     </div>
                                 </div><!--  selectors -->
                                 <div class="categories">
+                                    <input type="checkbox"" id="sports" class="visually-hidden"">
                                     <label for="sports" class="sports-button">Add Sports</label>
-                                    <input type="checkbox" id="sports">
+                                    <input type="checkbox" id="slang" class="visually-hidden"">
                                     <label for="slang" class="slang-button">Add Slang</label>
-                                    <input type="checkbox" id="slang">
                                 </div>
                             <button class=".generate">Generate</button>
                             <h2 class="scroll-down-notification"></h2>
