add accesible label for background, more comments and sports words

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <section class="start-page">
+        <span class="visually-hidden">Background image of Toronto city hall at night.</span>
         <div class="outer-wrapper">
             <div class="inner-wrapper">
                 <div class="start-page-content-box">
@@ -29,7 +30,7 @@
                                         </select>
                                     </div>
                                     <div class="paragraph-num selector-area">
-                                        <label for="paragraph-num">Paragraphs: </label>
+                                        <label for="paragraph-num">Number of Paragraphs: </label>
                                         <select name="paragraph-num" id="paragraph-num">
                                             <option value="1">1 paragraph</option>
                                             <option value="2">2 paragraphs</option>
