fixed logic bug in randNumNoRepeat

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                         </select>
                                     </div>
                                 </div><!--  selectors -->
-                                <div class="categories">
+                                <div class="categories" role="group">
                                     <input type="checkbox"" id="sports" class="visually-hidden"">
                                     <label for="sports" class="sports-button">Add Sports</label>
                                     <input type="checkbox" id="slang" class="visually-hidden"">
