--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                                     </div>
                                 </div><!--  selectors -->
                                 <div class="categories" role="group">
+                                    <span class="visually-hidden">Please hit space to toggle selections</span>
                                     <input type="checkbox"" id="sports" class="visually-hidden"">
                                     <label for="sports" class="sports-button">Add Sports</label>
                                     <input type="checkbox" id="slang" class="visually-hidden"">
